--- a/src/index.css
+++ b/src/index.css
@@ -44,18 +44,16 @@
     }
 }
 
-@keyframes bounce {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.2);
-    }
-    100% {
-        transform: scale(1);
-    }
+.bouncing {
+    animation: bounce 0.5s infinite;
 }
 
-.bouncing-marker {
-    transform: scale(2);
+@keyframes bounce {
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
 }
