--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-}
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -24,8 +18,15 @@
 }
 
 @layer base {
+    @font-face {
+        font-family: 'Funnel';
+        font-style: normal;
+        font-display: swap;
+        src: url('assets/fonts/FunnelD.ttf') format('truetype');
+    }
+
     h1 {
-        @apply text-3xl font-bold leading-10;
+        @apply text-2xl font-bold;
     }
     h2 {
         @apply text-xl font-bold;
@@ -33,14 +34,6 @@
 
     h3 {
         @apply text-lg font-bold;
-    }
-
-    a {
-        @apply text-green-600;
-    }
-
-    a:hover {
-        @apply text-green-700;
     }
 }
 
