--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,48 @@
 .yarl__slide_image {
     border-radius: 16px;
 }
+
+.marker-tooltip.marker-tooltip {
+    opacity: 0;
+    transform: translateY(0);
+    transition: none;
+    pointer-events: none;
+}
+
+.marker-tooltip.marker-tooltip.leaflet-tooltip-open {
+    opacity: 1;
+    transform: translateY(0);
+    animation: bounceIn 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+
+@keyframes bounceIn {
+    0% {
+        transform: translateY(20px);
+        opacity: 0;
+    }
+    60% {
+        transform: translateY(-10px);
+        opacity: 1;
+    }
+    80% {
+        transform: translateY(5px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.marker {
+    z-index: 1 !important;
+}
+
+.marker-hover {
+    z-index: 1000000 !important;
+}
+
+.marker-tooltip {
+    background: #fff;
+    border: none;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+    padding: 10px 10px;
+}
