--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @import 'https://unpkg.com/leaflet@1.9.4/dist/leaflet.css';
 @tailwind base;
 @tailwind components;
@@ -17,15 +18,11 @@
     height: 100vh;
 }
 
-.inter {
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-}
-
 @layer base {
     h1 {
         @apply text-2xl font-bold;
     }
+
     h2 {
         @apply text-xl font-bold;
     }
@@ -33,6 +30,10 @@
     h3 {
         @apply text-lg font-bold;
     }
+}
+
+body {
+    @apply text-black;
 }
 
 .bouncing {
